[FIX]- overflow problem and bug with navbar not updating the profile pic

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   text-align: center;
   overflow-x:hidden!important;
-  height:100vh;  
 }
 
 .registerpage{
