--- a/src/components/Home/Feed/Feed.scss
+++ b/src/components/Home/Feed/Feed.scss
@@ -1,6 +1,8 @@
 .Feed{
+    overflow: hidden!important;
     .postDiv{
         position: relative;
+        overflow: hidden!important;
         .postButton{
             position:absolute;
             right:0;
