--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,3 +1,4 @@
 .Home{
     position: relative;
+    overflow-y: hidden!important;
 }
